加入多彩泡泡

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
             android:screenOrientation="landscape" />
         <activity android:name=".GridPointActivity"
             android:screenOrientation="landscape" />
+        <activity android:name=".ColorBubbleActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
