升级上帝之环效果

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".DiffusionRingActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".WaveRingActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
