--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sss.spectrum">
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <!-- RECORD_AUDIO 需要创建录音机 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!-- MODIFY_AUDIO_SETTINGS 需要使用环境混响等音频效果 -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,46 +17,62 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|screenSize|keyboardHidden">
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HorizontalEnergyActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".AiVoiceActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".SiriActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".SlipBallActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".HexagramViewActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".ColumnarActivity"
-            android:screenOrientation="landscape"/>
-        <activity android:name=".BesselActivity"
+        <activity
+            android:name=".HorizontalEnergyActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".WaveActivity"
-            android:screenOrientation="landscape"  />
-        <activity android:name=".CircleRoundActivity"
-            android:screenOrientation="landscape"  />
-        <activity android:name=".SpeedometerActivity"
+        <activity
+            android:name=".AiVoiceActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".RotatingCircleActivity"
+        <activity
+            android:name=".SiriActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".GridPointActivity"
+        <activity
+            android:name=".SlipBallActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".ColorBubbleActivity"
+        <activity
+            android:name=".HexagramViewActivity"
             android:screenOrientation="landscape" />
-        <activity android:name=".AttachmentRingActivity"
+        <activity
+            android:name=".ColumnarActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".BesselActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".WaveActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".CircleRoundActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".SpeedometerActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".RotatingCircleActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".GridPointActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".ColorBubbleActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".AttachmentRingActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".DiffusionRingActivity"
+        <activity
+            android:name=".DiffusionRingActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".WaveRingActivity"
-            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".WaveRingActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
