新增仿酷狗PC客户端双层柱状

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -68,6 +69,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".WaveRingActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name="com.sss.spectrum.KugouColumnActivity"
             android:screenOrientation="landscape" />
     </application>
 
